--- a/learn-springboot-initializr-jar/src/main/resources/application.yaml
+++ b/learn-springboot-initializr-jar/src/main/resources/application.yaml
@@ -8,3 +8,7 @@ spring:
     url: jdbc:mysql://localhost:3306/learn?serverTimezone=UTC
     username: root
     password: hyflearn
+hyf:
+  hot-refresh:
+    server:
+      enabled: true
